alter sales_transactions
