# docs/swagger.yaml
@@ -64,18 +64,30 @@ definitions:
     type: object
   handlers.CreateTransactionRequest:
     properties:
+      curriculum_id:
+        type: string
       due_date:
         type: string
       items:
         items:
           $ref: '#/definitions/handlers.CreateTransactionItemRequest'
         type: array
+      jenjang_studi_id:
+        type: string
+      merk_buku_id:
+        type: string
       payment_type:
         description: '''T'' or ''K'''
         type: string
+      periode:
+        type: integer
       sales_associate_id:
         type: string
+      secondary_due_date:
+        type: string
       transaction_date:
+        type: string
+      year:
         type: string
     type: object
   handlers.LoginRequest:
@@ -120,19 +132,31 @@ definitions:
     type: object
   handlers.UpdateTransactionRequest:
     properties:
+      curriculum_id:
+        type: string
       due_date:
         type: string
       items:
         items:
           $ref: '#/definitions/handlers.CreateTransactionItemRequest'
         type: array
+      jenjang_studi_id:
+        type: string
+      merk_buku_id:
+        type: string
       payment_type:
         type: string
+      periode:
+        type: integer
       sales_associate_id:
+        type: string
+      secondary_due_date:
         type: string
       status:
         type: integer
       transaction_date:
+        type: string
+      year:
         type: string
     type: object
   models.BidangStudi:
@@ -537,6 +561,10 @@ definitions:
         type: string
       created_at:
         type: string
+      curriculum:
+        $ref: '#/definitions/models.Curriculum'
+      curriculum_id:
+        type: string
       due_date:
         type: string
       id:
@@ -545,6 +573,14 @@ definitions:
         items:
           $ref: '#/definitions/models.SalesTransactionItem'
         type: array
+      jenjang_studi:
+        $ref: '#/definitions/models.JenjangStudi'
+      jenjang_studi_id:
+        type: string
+      merk_buku:
+        $ref: '#/definitions/models.MerkBuku'
+      merk_buku_id:
+        type: string
       no_invoice:
         type: string
       payment_type:
@@ -554,9 +590,13 @@ definitions:
         items:
           $ref: '#/definitions/models.Payment'
         type: array
+      periode:
+        type: integer
       sales_associate:
         $ref: '#/definitions/models.SalesAssociate'
       sales_associate_id:
+        type: string
+      secondary_due_date:
         type: string
       shippings:
         items:
@@ -571,6 +611,8 @@ definitions:
         type: string
       updated_at:
         type: string
+      year:
+        type: string
     type: object
   models.SalesTransactionInstallment:
     properties:
@@ -578,6 +620,10 @@ definitions:
         type: number
       created_at:
         type: string
+      discount_amount:
+        type: number
+      discount_percentage:
+        type: number
       id:
         type: string
       installment_date:
